--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 <script>
  $(function(){
     $(document).scroll(function(){
-        if($(this).scrollTop() >= $('#section1Ani').offset().top - 50) {
+        if($(this).scrollTop() <= $('#section1Ani').offset().top - 50) {
             $("#section1Ani").addClass("animate__bounceInDown animate__slow");
             $("#section1Ani2").addClass("animate__fadeInLeft animate__delay-1s");
             $("#section1Ani3").addClass("animate__fadeIn animate__slow 	1s animate__delay-3s");
